macros/tests/macros/failures/unsafe_function.rs
#[netsim_embed_macros::machine]
unsafe fn foo() {}

fn main() {}
